# Frankenmolder2

./: CMakeLists.txt  Dockerfile  PICO_SETUP.md  compose.yaml  docker-compose.yaml  docker-compose.yml  launch_all.sh  launch_gui.sh  main.py  start_node.sh  test_pico_commands.py
arduino_firmware/: arduino_firmware.ino
can_bridge_pkg/: CMakeLists.txt  package.xml
can_bridge_pkg/src/: can_bridge_node.py
esp32_firmware/: esp32_firmware.ino
frankenmolder_gui/: CMakeLists.txt  package.xml
frankenmolder_gui/src/: extruder_gui_node.py
frankenmolder_utils/: CMakeLists.txt  package.xml
frankenmolder_utils/src/: topic_watchdog.py
heater_control_pkg/: CMakeLists.txt  package.xml
heater_control_pkg/src/: heater_control_node.py
launch/: injection_molding.launch
pico_bridge_pkg/: CMakeLists.txt  package.xml
pico_bridge_pkg/src/: pico_bridge_node.py
pico_comm_pkg/: CMakeLists.txt  package.xml
pico_comm_pkg/src/: pico_serial_node.py
pico_firmware/: main.py
temp_sensor_pkg/: CMakeLists.txt  package.xml
temp_sensor_pkg/src/: temp_publisher_node.py
temperature_sensor_pkg/: CMakeLists.txt  package.xml
temperature_sensor_pkg/launch/: foxglove_tailscale.launch
temperature_sensor_pkg/src/: extruder_zone1_control_node.py  extruder_zone1_temp_node.py  extruder_zone2_temp_node.py  extruder_zone3_temp_node.py
