<?xml version="1.0"?>
<package format="2">
  <name>can_bridge_pkg</name>
  <version>0.0.1</version>
  <description>The package to bridge ROS topics with the CAN bus.</description>

  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <!-- Add python-can as a system dependency -->
  <exec_depend>python3-can</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>

