<?xml version="1.0"?>
<package format="2">
  <name>can_bridge_pkg</name>
  <version>0.0.1</version>
  <description>
    This package provides a ROS node to bridge communication
    between the ROS network and the ESP32 CAN bus controller.
  </description>

  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies for this node -->
  <depend>rospy</depend>
  <depend>std_msgs</independ>
  
  <!-- We add can_msgs for debugging the raw CAN frames -->
  <depend>can_msgs</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>