<?xml version="1.0"?>
<package format="2">
  <name>frankenmolder_gui</name>
  <version>0.0.0</version>
  <description>The GUI interface for the entire machine.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <export>
    <build_type>catkin</build_type>
  </export>
</package>