<?xml version="1.0"?>
<package format="2">
  <name>pico_bridge_pkg</name>
  <version>0.0.1</version>
  <description>Bridge node for ROS to Pico serial communication.</description>
  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
