<?xml version="1.0"?>
<package format="2">
  <name>pico_comm_pkg</name>
  <version>0.0.0</version>
  <description>High-frequency serial communication with Pi Pico 2W for injection molding control</description>

  <maintainer email="dave@gmail.com">Dave</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>python3-dev</build_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
