<?xml version="1.0"?>
<package format="2">
  <name>temperature_sensor_pkg</name>
  <version>0.0.0</version>
  <description>ROS package to read MAX6675 temperature and publish it as a topic.</description>

  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <build_depend>python3-dev</build_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python3-spidev</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>